syntax = "proto3";

option go_package = "service/";

service Layer8MasterService {
    rpc GetJwtSecret(Empty) returns (JwtSecretResponse);
    rpc GetPublicKey(Empty) returns (PublicKeyResponse);
}

message JwtSecretResponse {
    string jwt_secret = 1;
}

message PublicKeyResponse {
    string public_key = 1;
}

message Empty {}
